RTI-1085 - fixed custom headers being misaligned

--- a/community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -385,6 +385,8 @@
 
     .ag-header-cell:not(.ag-header-cell-auto-height) .ag-header-cell-comp-wrapper {
         height: 100%;
+        display: flex;
+        align-items: center;
     }
 
     .ag-header-cell-comp-wrapper {
